--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -98,14 +98,10 @@
 
           <p class="center-big" id="textContainer"></p>
 
-          <p id="chat">
-            <input
-              type="text"
-              id="message_input"
-              placeholder="Type your message..."
-            />
+          <div class="chat">
+            <input type="text" id="message_input" placeholder="Type your message..." />
             <button onclick="sendMessage()">Send</button>
-          </p>
+          </div>
         </div>
 
         <p class="center-med">Players: <b id="playerNames">No One Here</b></p>
