--- a/app/static/style_chatroom.css
+++ b/app/static/style_chatroom.css
@@ -223,7 +223,8 @@ html {
   width: 500px;
   overflow-y: auto;
   overflow-x: auto;
-  border: 3px solid rgb(157, 155, 155);
+  border: 2px solid black;
+  border-radius: 3px;
   padding: 5px;
 }
 
