--- a/app/static/style_home.css
+++ b/app/static/style_home.css
@@ -32,7 +32,7 @@ html {
   padding-bottom: 0; /* No padding at the bottom */
   padding-left: 0.625rem; /* Converted from 10px to rem */
   padding-right: 0.625rem; /* Converted from 10px to rem */
-  background-color: #1995AD;
+  background-color:  #A1D6E2;
 }
 
 /* --- everything in nav bar start here --- */
