--- a/app/static/style_chatroom.css
+++ b/app/static/style_chatroom.css
@@ -32,7 +32,7 @@ html {
   padding-bottom: 0; /* No padding at the bottom */
   padding-left: 0.625rem; /* Converted from 10px to rem */
   padding-right: 0.625rem; /* Converted from 10px to rem */
-  background-color: rgba(246, 246, 246);
+  background-color:  #96858F;
 }
 
 /* --- everything in nav bar start here --- */
