--- a/app/static/registerandlogin.css
+++ b/app/static/registerandlogin.css
@@ -29,11 +29,7 @@ html {
   justify-content: center;
   align-items: center;
   min-height: 100vh; /* 100% viewport height */
-  background-color: rgb(
-    153,
-    148,
-    148
-  ); /* Background color for the wrapper using RGB values */
+  background-color: #96858F; /* Background color for the wrapper using RGB values */
 }
 
 .content {
@@ -75,7 +71,6 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: white;
 }
 
 label {
@@ -89,8 +84,8 @@ input[type="password"] {
   border: none;
   border-radius: 10px;
   padding: 15px;
-  background: #333;
-  color: white;
+  background: #d5d5d5;
+  color: black;
   font-size: 12pt;
   box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.56);
   outline: none;
@@ -113,8 +108,9 @@ button[type="submit"] {
   text-transform: uppercase;
   font-weight: 800;
   letter-spacing: 3px;
-  color: black;
+  color: white;
   cursor: pointer;
+  background-color: black;
 }
 
 p {
