--- a/app/static/style_home.css
+++ b/app/static/style_home.css
@@ -32,7 +32,7 @@ html {
   padding-bottom: 0; /* No padding at the bottom */
   padding-left: 0.625rem; /* Converted from 10px to rem */
   padding-right: 0.625rem; /* Converted from 10px to rem */
-  background-color:  #A1D6E2;
+  background-color:  #9999A2;
 }
 
 /* --- everything in nav bar start here --- */
@@ -207,7 +207,7 @@ html {
 #image {
   margin-top: 10px;
   max-width: 80%; /* No change needed, as percentage values are relative */
-  background-color:  #EDF4F2;
+  background-color:  #d5d5d5;
 }
 
 .sayles_button {
