--- a/app/static/style_chatroom.css
+++ b/app/static/style_chatroom.css
@@ -37,7 +37,7 @@ html {
 
 /* --- everything in nav bar start here --- */
 .navbar {
-  background-color: lightblue;
+  background-color: white;
   position: relative; /* Required for absolute positioning of children */
 }
 
