--- a/app/static/about-us-page.css
+++ b/app/static/about-us-page.css
@@ -16,13 +16,13 @@ CSS file for the about-us-page.html  where there is the desciption of the users
   padding: 0;
   box-sizing: border-box;
   font-family: "font1", sans-serif;
-  background-color: #96858F;
+  background-color:  rgb(239, 234, 223);
 }
 
 body,
 html {
   height: 100%;
-  background-color: #96858F;
+  background-color: rgb(239, 234, 223);
 }
 
 .wrapper {
@@ -35,7 +35,7 @@ html {
   padding-bottom: 0; /* No padding at the bottom */
   padding-left: 0.625rem; /* Converted from 10px to rem */
   padding-right: 0.625rem; /* Converted from 10px to rem */
-  background-color: #96858F;
+  background-color:   rgb(239, 234, 223);
 }
 
 /* --- everything in nav bar start here --- */
@@ -124,7 +124,7 @@ html {
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color:  rgb(239, 234, 223);
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
@@ -213,6 +213,7 @@ html {
 .image {
   display: inline-block; 
   margin: 5px;
+  border-radius: 1px solid white;
 }
 
 .caption {
