--- a/app/static/style_profile.css
+++ b/app/static/style_profile.css
@@ -29,16 +29,16 @@ CSS file for the profile page.
   padding-bottom: 0; /* No padding at the bottom */
   padding-left: 0.625rem; /* Converted from 10px to rem */
   padding-right: 0.625rem; /* Converted from 10px to rem */
-  background-color:  #9099A2;
+  background-color:  #CADCFC;
 }
 
 .body{
-  background-color:  #9099A2;
+  background-color:  #CADCFC;
 }
 
 /* --- everything in nav bar start here --- */
 .navbar {
-  background-color: #9099A2;
+  background-color: #CADCFC;
   position: relative; /* Required for absolute positioning of children */
 }
 
@@ -113,7 +113,7 @@ CSS file for the profile page.
 }
 
 .modal-content {
-  background-color: #9099A2;
+  background-color: #CADCFC;
   margin: 0 auto; /* Center horizontally */
   padding: 20px;
   border: 1px solid black;
@@ -152,7 +152,7 @@ CSS file for the profile page.
   flex-direction: column; /* Arrange child elements vertically */
   align-items: center;
   height: 100vh;
-  background-color: #9099A2;
+  background-color: #CADCFC;
 }
 
 .circle-image {
@@ -165,7 +165,7 @@ CSS file for the profile page.
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  border: 8px solid rgb(255, 200, 35); /* Increase border width */
+  border: 8px solid #07102c; /* Increase border width */
   margin-bottom: 30px;
 }
 
@@ -191,7 +191,7 @@ CSS file for the profile page.
 
 /* Modal Content */
 #myModal .modal-content {
-  background-color: #fff; /* White background for modal content */
+  background-color:  rgb(239, 234, 223); /* White background for modal content */
   margin: 10% auto; /* Center modal vertically and horizontally */
   padding: 20px;
   max-width: 600px; /* Limit width of modal content */
@@ -210,7 +210,7 @@ CSS file for the profile page.
   overflow: hidden;
   display: flex;
   justify-content: center;
-  background-color: #9099A2;
+  background-color:  rgb(239, 234, 223);
   align-items: center;
   margin: 0 auto 20px; /* Center horizontally and add margin bottom */
 }
@@ -268,7 +268,7 @@ button {
   justify-content: center;
   align-items: center;
   min-height: 100vh; /* 100% viewport height */
-  background-color:#96858F; /* Background color for the wrapper using RGB values */
+  background-color: #CADCFC; /* Background color for the wrapper using RGB values */
 }
 
 .information {
@@ -352,7 +352,7 @@ p a {
   border: none;
   border-radius: 10px;
   padding: 15px;
-  background: #d5d5d5;
+  background:  rgb(239, 234, 223);
   color: black;
   font-size: 12pt;
   box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.56);
