--- a/app/static/style_library.css
+++ b/app/static/style_library.css
@@ -5,7 +5,6 @@ Updated: May 31, 2024
 CSS file for both the library page.
  */
 
-
 @font-face {
   font-family: "font1";
   src: url("../static/font.ttf") format("truetype");
@@ -123,12 +122,11 @@ html {
 }
 
 .modal-content {
-  background-color: #9099A2;
+  background-color: #9099a2;
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
-  
 }
 
 .close {
@@ -201,6 +199,7 @@ h2 {
   color: #666;
   text-align: center;
   margin-bottom: -3rem;
+  z-index: 1000;
 }
 
 .image-wrapper #music_image {
