Changed variable names

--- a/app/static/style_chatroom.css
+++ b/app/static/style_chatroom.css
@@ -206,7 +206,7 @@ html {
   margin-bottom: 10px;
 }
 
-.red {
+.received_text {
   color: rgb(176, 83, 87);
   text-align: left;
   display: block;
